--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="no">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,28 @@
     <link rel="stylesheet" href="style.css">
     <title>Godteri.no</title>
 </head>
+
 <body>
+
     <h1>Få 100% gratis Godteri!</h1>
     <div>
     <p>vist du svarer på denne undersøkelsen kan du få gratis godteri på de nermeste butikk.</p>
-    <img src="100.jpg" alt="100%"width="500">
-     </div>
-</body>
+    <img src="100.jpg" alt="100%"width="400">
+    
+</div>
+<p>Skriv inn navnet ditt under her.</p>
+<input
+            placeholder="Navn"
+            id="haha"
+            onkeydown="alert(event)"
+        >
+    </body>
+
+    <button
+    onclick="fire()"
+>
+Enter
+</button>
+
 </html>
+
