--- a/index.html
+++ b/index.html
@@ -31,5 +31,11 @@
 Enter
 </button>
 
+<head>
+    <script src="index.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+</head>
+
 </html>
 
