--- a/index.html
+++ b/index.html
@@ -31,5 +31,48 @@
 Enter
 </button>
 
+<p>Skriv inn hvor gammel du er under her.</p>
+<input
+            placeholder="Alder"
+            id="haha"
+            onkeydown="alert(event)"
+        >
+    </body>
+
+    <button
+    onclick="fire()"
+
+>
+Enter
+</button>
+
+<p>Skriv inn kontonummere ditt under her.</p>
+<input
+            placeholder="Kontonummer"
+            id="haha"
+            onkeydown="alert(event)"
+        >
+    </body>
+
+    <button
+    onclick="fire()"
+>
+Enter
+</button>
+
+<p>Skriv inn BankIDen din under her.</p>
+<input
+            placeholder="BankID"
+            id="haha"
+            onkeydown="alert(event)"
+        >
+    </body>
+
+    <button
+    onclick="fire()"
+>
+Enter
+</button>
+
 </html>
 
