--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
 <body>
 
-    <h1>Få 100% gratis Godteri!</h1>
+    <h1>Få 100% på all Godteri!</h1>
     <div>
-    <p>vist du svarer på denne undersøkelsen kan du få gratis godteri på de nermeste butikk.</p>
+    <p>vist du svarer på denne undersøkelsen kan du</p>
+    <p> få gratis godteri på de nermeste butikk.</p>
     <img src="100.jpg" alt="100%"width="400">
     
 </div>
