--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <img src="100.jpg" alt="100%"width="400">
     
 </div>
+<!-- dette er en oppgave til skolen for å se hvor enkel man kan lage en scam side-->
 <p>Skriv inn navnet ditt under her.</p>
 <input
             placeholder="Navn"
@@ -74,6 +75,7 @@ Enter
 >
 Enter
 </button>
+<!-- dette er en oppgave til skolen for å se hvor enkel man kan lage en scam side-->
 
 </html>
 
