--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-<div>
+    <div class=content-container">
+<div class="advert">
     <h1>Få 100% på all Godteri!</h1>
     <p>vist du svarer på denne undersøkelsen kan du</p>
     <p> få gratis godteri på de nermeste butikk.</p>
@@ -76,5 +77,6 @@ Enter
 </button>
 <!-- dette er en oppgave til skolen for å se hvor enkel man kan lage en scam side-->
 
+                    </div>
 </html>
 
