--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p>vist du svarer på denne undersøkelsen kan du</p>
     <p> få gratis godteri på de nermeste butikk.</p>
 </div>
-    <img src="100.jpg" alt="100%"width="300">
+    <img src="100.jpg" alt="100%"width="225">
     
 <!-- dette er en oppgave til skolen for å se hvor enkel man kan lage en scam side-->
 <p>Skriv inn navnet ditt under her.</p>
@@ -25,13 +25,16 @@
             placeholder="Navn"
             id="haha"
         >
+        <button>
+
+            <input type="reset">
+        </button>
     </body>
 
-    <button
-    onclick="fire()"
->
+    <button>
 Enter
 </button>
+
 
 <p>Skriv inn hvor gammel du er under her.</p>
 <input
